--- a/404.html
+++ b/404.html
@@ -140,12 +140,12 @@
           <div class="container mx-auto px-6 pt-2 pb-2 bg-slate-50">
             <div class="flex items-center">
               <input checked id="verbose-chk" type="checkbox" value="1"
-                class="w-4 h-4 text-blue-600 bg-gray-100 rounded-sm border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                class="w-4 h-4 text-blue-600 bg-gray-100 rounded border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
               <label for="verbose-chk"
                 class="ml-2 mr-4 text-sm font-medium text-gray-900 dark:text-gray-300">Verbose</label>
 
               <input id="verbose2-chk" type="checkbox" value="1"
-                class="w-4 h-4 text-blue-600 bg-gray-100 rounded-sm border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                class="w-4 h-4 text-blue-600 bg-gray-100 rounded border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
               <label for="verbose2-chk" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-300">Extra
                 Verbose</label>
             </div>
@@ -153,7 +153,7 @@
           <div class="container mt-4 mx-auto px-6 pt-2 pb-2 bg-slate-50" id="spaw">
             <div class="flex items-center">
               <input id="sparse-chk" type="checkbox" value="1"
-                class="w-4 h-4 text-blue-600 bg-gray-100 rounded-sm border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                class="w-4 h-4 text-blue-600 bg-gray-100 rounded border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
               <label for="sparse-chk" class="ml-2 mr-4 text-sm font-medium text-gray-900 dark:text-gray-300">Sparse
                 Files</label>
             </div>
@@ -167,7 +167,7 @@
     <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 pb-2 bg-slate-50 hidden">
       <div class="flex items-center mb-4">
         <input id="permissions-chk" type="checkbox" value="1"
-          class="w-4 h-4 text-blue-600 bg-gray-100 rounded-sm border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+          class="w-4 h-4 text-blue-600 bg-gray-100 rounded border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
         <label for="permissions-chk" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-300">Overriding
           permissions</label>
       </div>
@@ -195,15 +195,15 @@
               </th>
               <td class="py-4 px-6">
                 <input checked type="checkbox" value=""
-                  class="w-4 h-4 text-red-600 bg-gray-100 rounded-sm border-gray-300 focus:ring-red-500 dark:focus:ring-red-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                  class="w-4 h-4 text-red-600 bg-gray-100 rounded border-gray-300 focus:ring-red-500 dark:focus:ring-red-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
               </td>
               <td class="py-4 px-6">
                 <input type="checkbox" value=""
-                  class="w-4 h-4 text-red-600 bg-gray-100 rounded-sm border-gray-300 focus:ring-red-500 dark:focus:ring-red-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                  class="w-4 h-4 text-red-600 bg-gray-100 rounded border-gray-300 focus:ring-red-500 dark:focus:ring-red-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
               </td>
               <td class="py-4 px-6">
                 <input type="checkbox" value=""
-                  class="w-4 h-4 text-red-600 bg-gray-100 rounded-sm border-gray-300 focus:ring-red-500 dark:focus:ring-red-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                  class="w-4 h-4 text-red-600 bg-gray-100 rounded border-gray-300 focus:ring-red-500 dark:focus:ring-red-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
               </td>
             </tr>
             <tr class="bg-white dark:bg-gray-800">
@@ -212,15 +212,15 @@
               </th>
               <td class="py-4 px-6">
                 <input checked type="checkbox" value=""
-                  class="w-4 h-4 text-yellow-400 bg-gray-100 rounded-sm border-gray-300 focus:ring-yellow-500 dark:focus:ring-yellow-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                  class="w-4 h-4 text-yellow-400 bg-gray-100 rounded border-gray-300 focus:ring-yellow-500 dark:focus:ring-yellow-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
               </td>
               <td class="py-4 px-6">
                 <input checked type="checkbox" value=""
-                  class="w-4 h-4 text-yellow-400 bg-gray-100 rounded-sm border-gray-300 focus:ring-yellow-500 dark:focus:ring-yellow-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                  class="w-4 h-4 text-yellow-400 bg-gray-100 rounded border-gray-300 focus:ring-yellow-500 dark:focus:ring-yellow-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
               </td>
               <td class="py-4 px-6">
                 <input type="checkbox" value=""
-                  class="w-4 h-4 text-yellow-400 bg-gray-100 rounded-sm border-gray-300 focus:ring-yellow-500 dark:focus:ring-yellow-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                  class="w-4 h-4 text-yellow-400 bg-gray-100 rounded border-gray-300 focus:ring-yellow-500 dark:focus:ring-yellow-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
               </td>
             </tr>
             <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
@@ -229,15 +229,15 @@
               </th>
               <td class="py-4 px-6">
                 <input checked type="checkbox" value=""
-                  class="w-4 h-4 text-green-600 bg-gray-100 rounded-sm border-gray-300 focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                  class="w-4 h-4 text-green-600 bg-gray-100 rounded border-gray-300 focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
               </td>
               <td class="py-4 px-6">
                 <input checked type="checkbox" value=""
-                  class="w-4 h-4 text-green-600 bg-gray-100 rounded-sm border-gray-300 focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                  class="w-4 h-4 text-green-600 bg-gray-100 rounded border-gray-300 focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
               </td>
               <td class="py-4 px-6">
                 <input checked type="checkbox" value=""
-                  class="w-4 h-4 text-green-600 bg-gray-100 rounded-sm border-gray-300 focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                  class="w-4 h-4 text-green-600 bg-gray-100 rounded border-gray-300 focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
               </td>
             </tr>
           </tbody>
