--- a/player.html
+++ b/player.html
@@ -176,7 +176,7 @@
             </div>
             <div>
                 <button id="play-button"
-                    class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded-sm shadow-sm"
+                    class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"
                     disabled>Play</button>
             </div>
             <div>
