--- a/unicode.html
+++ b/unicode.html
@@ -51,7 +51,7 @@
     <div class="w-5/6 mt-9 mx-auto px-4 pt-2 bg-slate-50 container">
         <table id="ut"
             class="hide w-full text-sm text-left text-gray-500 dark:text-gray-400 border-collapse border border-slate-400">
-            <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-gray-700 dark:text-gray-400">
+            <thead class="text-sm text-gray-700 uppercase bg-gray-100 dark:bg-gray-700 dark:text-gray-400">
                 <tr>
                     <th scope="col" class="px-6 py-3">
                         U+
@@ -294,7 +294,7 @@
             let y = Math.ceil(b / 16);
             let container = document.querySelector('.container');
             let table = document.createElement('table');
-            table.setAttribute('class', "text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400");
+            table.setAttribute('class', "text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400");
             let caption = document.createElement('caption');
             caption.setAttribute('class', 'text-sm');
             caption.innerText = title;
