--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
   <link rel="manifest" href="/site.webmanifest">
   <link href="/css/tailwind.css" rel="stylesheet">
   <script src="/js/main.js"></script>
-  <script async src="https://media.ethicalads.io/media/client/ethicalads.min.js"></script>
+  <!-- <script async src="https://media.ethicalads.io/media/client/ethicalads.min.js"></script> -->
   <meta name="description"
     content="Quickly generate tar in archives and compressing modes. All formats included (gzip, bzip2, lbzip2, xz, zstd, etc). Ready to copy paste to your terminal in seconds." />
   <meta name="robots" content="noodp" />
