--- a/schulte.html
+++ b/schulte.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link href="/css/tailwind.css" rel="stylesheet">
-    <script async src="https://media.ethicalads.io/media/client/ethicalads.min.js"></script>
+    <!-- <script async src="https://media.ethicalads.io/media/client/ethicalads.min.js"></script> -->
     <meta name="description"
         content="Quickly generate tar in archives and compressing modes. All formats included (gzip, bzip2, lbzip2, xz, zstd, etc). Ready to copy paste to your terminal in seconds." />
     <meta name="robots" content="noodp" />
