--- a/naturetimer.html
+++ b/naturetimer.html
@@ -92,6 +92,32 @@
             alert("当前浏览器不支持定位功能。");
         }
     </script>
+    <div id="timeInfo"
+        style="position: absolute; top: 10px; left: 50%; transform: translateX(-50%);
+        background: rgba(255,255,255,0.8); padding: 6px 12px; border-radius: 6px; font-family: sans-serif; font-size: 14px; z-index: 1000;">
+        加载中...
+    </div>
+
+    <script>
+        function getTimeZoneInfo() {
+            const localTime = new Date();
+            const utcTime = new Date(localTime.getTime() + localTime.getTimezoneOffset() * 60000);
+
+            navigator.geolocation.getCurrentPosition(pos => {
+                const lon = pos.coords.longitude;
+                const offset = Math.round(lon / 15);
+                const theoryTime = new Date(utcTime.getTime() + offset * 60 * 60000);
+
+                const result = `${theoryTime.toLocaleString()} UTC${offset >= 0 ? '+' : ''}${offset}`;
+                document.getElementById("timeInfo").innerHTML = result;
+            }, () => {
+                document.getElementById("timeInfo").innerText = "无法获取地理位置";
+            });
+        }
+
+        getTimeZoneInfo();
+    </script>
+
 </body>
 
 </html>
