--- a/404.html
+++ b/404.html
@@ -71,7 +71,7 @@
           <span class="title px-2">List</span>
         </label>
         <label class="flex radio p-2 cursor-pointer">
-          <input class="my-auto transform scale-125" type="radio" name="sfg" value="test_label" />
+          <input class="my-auto transform scale-125" type="radio" name="sfg" value="test" />
           <span class="title px-2">Test Label</span>
         </label>
         <label class="flex radio p-2 cursor-pointer">
