--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <meta name="og:type" content="website" />
   <meta name="og:image" content="https://tarcommand.com/android-chrome-512x512.png" />
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; img-src https://* 'self' data:; style-src 'self' 'unsafe-inline'; script-src-elem https://*.cloudflareinsights.com https://*.ethicalads.io 'self'; child-src 'none'; base-uri 'self'; frame-ancestors 'self'; form-action 'none';" />
+    content="default-src 'self'; img-src https://* 'self' data:; style-src 'self' 'unsafe-inline'; script-src-elem https://*.cloudflareinsights.com https://*.googlesyndication.com 'self'; child-src 'none'; base-uri 'self'; frame-ancestors 'self'; form-action 'none';" />
 </head>
 
 <body class="bg-slate-100">
