--- a/reqi.html
+++ b/reqi.html
@@ -25,8 +25,8 @@
     <meta name="og:site_name" content="Tar Command Generator" />
     <meta name="og:type" content="website" />
     <meta name="og:image" content="https://tarcommand.com/android-chrome-512x512.png" />
-    <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; img-src https://* 'self' data:; style-src 'self' 'unsafe-inline'; script-src-elem https://*.cloudflareinsights.com https://*.googlesyndication.com 'self' 'unsafe-inline'; child-src 'none'; base-uri 'self'; frame-ancestors 'self'; form-action 'none';" />
+    <!-- <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self'; img-src https://* 'self' data:; style-src 'self' 'unsafe-inline'; script-src-elem https://*.cloudflareinsights.com https://*.googlesyndication.com 'self' 'unsafe-inline'; child-src 'none'; base-uri 'self'; frame-ancestors 'self'; form-action 'none';" /> -->
     <style>
         .calendar {
             display: flex;
