--- a/index.html
+++ b/index.html
@@ -257,6 +257,8 @@
           etc.tar
           /etc</span></div>
     </div>
+    <div id="links" class="container w-5/6 mt-4 mx-auto px-4 pt-2 bg-slate-50 font-extralight">
+    </div>
     <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 pb-2 bg-slate-50 text-slate-500 font-extralight">
       <table class="table-auto w-5/6 text-right">
         <caption>~1.2G SQL dump file</caption>
