--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
   <link href="/css/tailwind.css" rel="stylesheet">
+  <link href="/css/link.css" rel="stylesheet">
   <script src="/js/main.js"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8802568049531531"
     crossorigin="anonymous"></script>
@@ -257,7 +258,7 @@
           etc.tar
           /etc</span></div>
     </div>
-    <div id="links" class="container w-5/6 mt-4 mx-auto px-4 pt-2 bg-slate-50 font-extralight">
+    <div id="links" class="link-grid container w-5/6 mt-4 mx-auto px-4 pt-2 bg-slate-50 font-extralight">
     </div>
     <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 pb-2 bg-slate-50 text-slate-500 font-extralight">
       <table class="table-auto w-5/6 text-right">
