--- a/unicode.html
+++ b/unicode.html
@@ -51,7 +51,7 @@
 <body class="bg-slate-100">
     <div class="w-5/6 mt-9 mx-auto px-4 pt-2 bg-slate-50 container">
         <table id="ut"
-            class="hide w-full text-sm text-left text-gray-500 dark:text-gray-400 border-collapse border border-slate-400">
+            class="hide w-full min-w-full table-auto border-collapse border border-slate-400 text-sm text-left text-gray-500 dark:text-gray-400">
             <thead class="text-sm text-gray-700 uppercase bg-gray-100 dark:bg-gray-700 dark:text-gray-400">
                 <tr>
                     <th scope="col" class="px-6 py-3">
