--- a/unicode.html
+++ b/unicode.html
@@ -45,6 +45,10 @@
         body {
             font-family: 'Noto Sans', 'Noto Emoji', 'Arial Unicode MS', sans-serif;
         }
+
+        td {
+            text-align: center;
+        }
     </style>
 </head>
 
