--- a/schulte.html
+++ b/schulte.html
@@ -16,7 +16,7 @@
     <meta name="description"
         content="Quickly generate tar in archives and compressing modes. All formats included (gzip, bzip2, lbzip2, xz, zstd, etc). Ready to copy paste to your terminal in seconds." />
     <meta name="robots" content="noodp" />
-    <link rel="canonical" href="https://tarcommand.com/" />
+    <link rel="canonical" href="https://tarcommand.com/schulte.html" />
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="Tar Command Generator | Tar Command" />
     <meta name="og:description"
