--- a/unicode.html
+++ b/unicode.html
@@ -48,6 +48,16 @@
 
         td {
             text-align: center;
+            font-family:
+                'HanaMinA',
+                'HanaMinB',
+                'Noto Serif CJK SC',
+                'Noto Serif CJK JP',
+                'Noto Sans CJK SC',
+                'Noto Sans CJK JP',
+                'Noto Emoji',
+                sans-serif;
+            font-size: 1rem;
         }
 
         #unicode-preview {
