--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@
       <a href="/unicode.html" class="underline">Unicode</a>&nbsp;&nbsp;
       <a href="/reqi.html" class="underline">Datetime Calculator</a>&nbsp;&nbsp;
       <a href="/schulte.html" class="underline">Schulte Grid</a>
+      <a href="/washing-valley-timer.html" class="underline">Washing valley Timer</a>
     </div>
     <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 bg-slate-100 text-slate-400 font-extralight">
       <a href="https://tarcommand.com/">&copy;<span id="year"></span> TAR Command, tarcommand.com</a>
