--- a/unicode.html
+++ b/unicode.html
@@ -51,6 +51,9 @@
             font-family:
                 'HanaMinA',
                 'HanaMinB',
+                'Segoe UI Emoji',
+                'Apple Color Emoji',
+                'Noto Color Emoji',
                 'Noto Serif CJK SC',
                 'Noto Serif CJK JP',
                 'Noto Sans CJK SC',
